# embedded-electronics-101

./: .gitignore  404.html  CONTRIBUTING.md  FACILITATOR.md  KIT_CONTENTS.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  resources.html  sitemap.xml
0-pre-workshop/: 01-basics.html  01-basics.md  02-arduino-setup.html  02-arduino-setup.md  03-first-sketch.html  03-first-sketch.md  README.md  homework-checklist.html  homework-checklist.md  index.html
1-workshop-1/: README.md  circuit-diagram.html  circuit-diagram.md  code-led-blink.ino  code-led-button.ino  index.html  troubleshooting.html  troubleshooting.md
2-inter-workshop/: 01-sensor-basics.html  01-sensor-basics.md  02-code-tweaking.html  02-code-tweaking.md  README.md  index.html  project-picker.html  project-picker.md
3-workshop-2/: README.md  index.html
4-inter-workshop/: 01-wifi-basics.html  01-wifi-basics.md  02-bluetooth-basics.html  02-bluetooth-basics.md  03-web-server-basics.html  03-web-server-basics.md  README.md  index.html  project-picker.html  project-picker.md
5-workshop-3/: README.md  index.html  troubleshooting.html  troubleshooting.md
docs/: .gitignore  0-pre-workshop  1-workshop-1  2-inter-workshop  3-workshop-2  4-inter-workshop  5-workshop-3  Gemfile  README.md  _config.yml  index.md  inter-workshop-2.md  inter-workshop.md  pre-workshop.md  resources.md  workshop-1.md  workshop-2.md  workshop-3.md
inter-workshop/: 01-sensor-basics.md  README.md  index.html  project-picker.md
inter-workshop-2/: index.html
pre-workshop/: 01-basics.md  02-arduino-setup.md  README.md  (+3 more)
(+67 files in other folders)
