[project]
name = "embedded-electronics-101-docs"
version = "1.0.0"
description = "Documentation for Embedded Electronics 101 workshop series"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.7.0",
    "pymdown-extensions>=10.7.0",
]

[project.optional-dependencies]
dev = [
    "mkdocs-material[imaging]",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
